--- a/app/globals.css
+++ b/app/globals.css
@@ -74,6 +74,7 @@
     --brand-dark-rgb: 24, 28, 38;
     --brand-light: 210 40% 98%;
     --brand-light-rgb: 245, 249, 255;
+    --brand-hero-background: 210 40% 98%;
   }
 
   .dark {
