--- a/app/globals.css
+++ b/app/globals.css
@@ -547,12 +547,18 @@
   .mask-gradient-vertical {
     -webkit-mask-image: linear-gradient(
       to bottom,
-      rgba(0,0,0,0.3) 0%,
+      rgba(0, 0, 0, 0.3) 0%,
       black 10%,
       black 90%,
-      rgba(0,0,0,0.3) 100%
+      rgba(0, 0, 0, 0.3) 100%
     );
-    mask-image: linear-gradient(to bottom, rgba(0,0,0,0.3) 0%, black 10%, black 90%, rgba(0,0,0,0.3) 100%);
+    mask-image: linear-gradient(
+      to bottom,
+      rgba(0, 0, 0, 0.3) 0%,
+      black 10%,
+      black 90%,
+      rgba(0, 0, 0, 0.3) 100%
+    );
   }
   .mask-gradient-top {
     -webkit-mask-image: linear-gradient(to bottom, transparent 0%, black 20%, black 100%);
